--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ remote_theme: pages-themes/architect@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 show_downloads: false
-baseurl: /docs/
+# baseurl: /docs/
 domain: hznut.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 url: https://hznut.github.io  # the base hostname and protocol for your site, e.g. http://example.com
