--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,47 @@
-remote_theme: pages-themes/architect@v0.2.0
+
+title: Himanshu Vijay
+author:
+  name: hznut
+
+description: >
+  Seasoned cloud backend engineer with startup experience.
+
+# Build settings
+
+# theme: minima
+
+# As of November 2023, GitHub Pages still uses Minima 2.5.1 (https://pages.github.com/versions/). 
+# If you want to use the latest Minima version on GitHub Pages, use the following setting and 
+# add a line comment on "theme: minima" above.
+# remote_theme: pages-themes/architect@v0.2.0
+# remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: jekyll/minima
+
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-show_downloads: false
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-feed
+  - jekyll-seo-tag
+
+# Theme-specific settings
+
+# If you want to link only specific pages in your header, use this and add the path to the pages
+# in order as they should show up.
+header_pages:
+  - about.md
+
+# Set to `true` to show excerpts on the homepage.
+#show_excerpts: false
+
+# Minima specific settings, which are only available from Minima 3.0 onward.
+minima:
+  skin: solarized-dark
+
+  social_links:
+    - { platform: github, user_url: "https://github.com/hznut" }
+    - { platform: linkedin, user_url: "https://www.linkedin.com/in/hvijay" }
+
+# show_downloads: false
 # baseurl: /docs/
-domain: hznut.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-url: https://hznut.github.io  # the base hostname and protocol for your site, e.g. http://example.com
+# domain: hznut.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+# url: https://hznut.github.io  # the base hostname and protocol for your site, e.g. http://example.com
+
