--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-
 title: Himanshu Vijay
 author:
   name: hznut
@@ -41,7 +40,7 @@ minima:
     - { platform: linkedin, user_url: "https://www.linkedin.com/in/hvijay" }
 
 # show_downloads: false
-# baseurl: /docs/
+baseurl: /
 # domain: hznut.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 # url: https://hznut.github.io  # the base hostname and protocol for your site, e.g. http://example.com
 
